crates/pardosa-genome/tests/compile_fail/hashmap_field.stderr
error: EVT-002: GenomeSafe: HashMap has non-deterministic iteration order. Use BTreeMap for deterministic serialization.
 --> tests/compile_fail/hashmap_field.rs:6:11
  |
6 |     data: HashMap<String, u32>,
  |           ^^^^^^^^^^^^^^^^^^^^
